# rust-template

./: LICENSE  README.md  cargo-generate.toml
tokio-template/: Cargo.toml  README.md  cargo-generate.toml  config.toml  rust-toolchain.toml
tokio-template/.github/workflows/: rust.yml
tokio-template/src/: config.rs  main.rs  telemetry.rs
