[package]
# name = "{{project-name}}"
name = "project-name"
version = "0.1.0"
# authors = ["{{authors}}"]
authors = ["authors"]
edition = "2021"
license-file = "LICENSE"
#repository = ""
#keywords = [""]
#categories = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
serde = { version = "1.0.193", features = ["derive"] }
# serde_json = "1.0.108"
structopt = "0.3.22"
thiserror = "1.0.26"
tokio = { version = "1.35.0", features = ["full"] }
# tokio-util = "0.7.10"
toml = "0.8.8"

# tracing dependencies
opentelemetry = { version = "0.21.0" }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
